--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-10  Martin Baulig  <martin@ximian.com>
+
+	* classes/SourceInfo.cs (SourceFile.Name): New property.
+
+	* classes/MethodSource.cs (IMethodSource.Name): Return the
+	SourceFile.Name, not the SourceFile.FileName.
+
 2003-03-09  Martin Baulig  <martin@ximian.com>
 
 	* frontends/gui/: Added .ctors which take the glade name instead
