--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-03-11  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/SourceManager.cs: The text in the source
+	buffer must always be terminated with a newline.
+
+2003-03-11  Martin Baulig  <martin@ximian.com>
+
 	* backends/SingleSteppingEngine.cs (do_next): Step one instruction
 	unless this is actually a call.
 
