--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-12  Martin Baulig  <martin@ximian.com>
+
+	* frontends/gui/FileOpenDialog.cs: New file.  This is a customized
+	Gtk.FileSelection which has a list of all source files.
+
 2003-03-11  Martin Baulig  <martin@ximian.com>
 
 	* frontends/gui/DebuggerGUI.cs: Implemented "File / Open".
