--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-23  Martin Baulig  <martin@ximian.com>
+
+	* classes/ProcessStart.cs (CommandLine): New public property.
+
+	* frontends/gui/DebuggerGUI.cs (StartProgram): Use just the name
+	of the managed application, not the full command line including
+	the wrapper in the title.
+
 2003-03-22  Martin Baulig  <martin@ximian.com>
 
 	* classes/ProcessStart.cs: Moved here from ../backends/.
