--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-03-23  Martin Baulig  <martin@ximian.com>
 
+	* classes/ProcessStart.cs (SetupEnvironment): Pass all environment
+	variables to the target.
+
+2003-03-23  Martin Baulig  <martin@ximian.com>
+
 	* classes/ProcessStart.cs (CommandLine): New public property.
 
 	* frontends/gui/DebuggerGUI.cs (StartProgram): Use just the name
