--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-03-24  Martin Baulig  <martin@ximian.com>
 
+	* frontends/gui/SourceManager.cs (CreateSourceView): Pass the full
+	pathname to the SourceList's .ctor.
+
+	* frontends/gui/SourceList.cs: We need to use the full pathname
+	when searching a breakpoint location
+
+2003-03-24  Martin Baulig  <martin@ximian.com>
+
 	* frontends/gui/debugger.glade: Disable the popup menu in the
 	code-browser-notebook.
 
