2003-03-25  Martin Baulig  <martin@ximian.com>
	* frontends/gui/SourceManager.cs: Use a single SourceList for all
	source files.

	* frontends/gui/SourceList.cs: Added "Duplicate View" item to the
	context menu to create another view of this source file.

svn path=/trunk/debugger/; revision=12818

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-03-25  Martin Baulig  <martin@ximian.com>
 
+	* frontends/gui/debugger.glade: Splitted locals and params display.
+
+	* frontends/gui/VariableDisplay.cs: Started to fix this.
+
+2003-03-25  Martin Baulig  <martin@ximian.com>
+
 	* frontends/gui/SourceManager.cs: Use a single SourceList for all
 	source files.
 
