2003-03-25  Martin Baulig  <martin@ximian.com>
	* frontends/gui/SourceList.cs (InsertBreakpoint): Implemented.

svn path=/trunk/debugger/; revision=12826

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-03-25  Martin Baulig  <martin@ximian.com>
 
+	* frontends/gui/SourceList.cs (InsertBreakpoint): Implemented.
+
+2003-03-25  Martin Baulig  <martin@ximian.com>
+
 	* frontends/gui/debugger.glade: Splitted locals and params display.
 
 	* frontends/gui/VariableDisplay.cs: Started to fix this.
