--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-31  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Require the new libgc.
+
 2003-03-30  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/thread-manager.c
