--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-05  Martin Baulig  <martin@ximian.com>
+
+	* wrapper/thread-manager.c: Reflect latest libgc API changes.
+
 2003-03-31  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/mono-debugger-jit-wrapper.h (MonoDebuggerThread): New
