--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-10  Martin Baulig  <martin@ximian.com>
+
+	* frontends/gui/DebuggerGUI.cs: Don't make the "About" dialog
+	modal.	
+
 2003-04-07  Martin Baulig  <martin@ximian.com>
 
 	* frontends/gui/ProgramToDebug.cs: Added a Gtk.Entry to specify the
