--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-04-10  Martin Baulig  <martin@ximian.com>
 
+	* backends/ThreadManager.cs (TargetOuput, TargetError): New public
+	events; use them to get the target's stdout and stderr instead of
+	the events in Process.
+
+2003-04-10  Martin Baulig  <martin@ximian.com>
+
 	* frontends/gui/DebuggerGUI.cs: Don't make the "About" dialog
 	modal.	
 
