--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-13  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetObject.cs (ObjectInvalidHandler): Removed.
+
 2003-04-12  Martin Baulig  <martin@ximian.com>
 
 	* backends/SingleSteppingEngine.cs (TargetExitedEvent): New event.
